funciona bien, pero con algunos problemas

--- a/JobsApp/src/components/Card.css
+++ b/JobsApp/src/components/Card.css
@@ -5,13 +5,14 @@
 	flex-direction: column;
 	background-color: #fff;
 	border-radius: 12px;
-	box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+	box-shadow: 0px 5px 15px -3px rgba(0, 0, 0, 0.3);
 }
 .card img {
 	border-radius: 12px 12px 0 0;
 	width: 100%;
 	height: 60%;
 	object-fit: cover;
+	object-position: 50% 20%;
 }
 
 .card__info {
@@ -40,7 +41,7 @@
 .card__info--rating span {
 	margin-left: 10px;
 	font-size: 12px;
-	color: #909090;
+	color: #141414;
 }
 
 .seeMore {
@@ -49,19 +50,24 @@
 	border-radius: 5px;
 	font-weight: 400;
 	color: #fff;
-	border: 1px solid #000039;
+	border: 1px solid #121212;
 	cursor: pointer;
-	background-color: #bab986;
-	background-image: linear-gradient(90deg, #000039, #3e3e53);
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
-	background-position: left bottom;
-	transition: background-size 0.5s ease, transform 0.3s ease;
+	background-color: #141414;
+	transition: transform 0.4s ease;
 }
 
 .seeMore:hover {
 	background-size: 100% 0%;
-	color: #000039;
 	font-weight: 600;
 	transform: translateY(-3px);
+}
+
+@media (max-width: 440px) {
+	.card {
+		width: 100%;
+		height: 400px;
+	}
+	.card__info--rating {
+		margin: 0;
+	}
 }
