--- a/JobsApp/src/components/CardContainer.css
+++ b/JobsApp/src/components/CardContainer.css
@@ -1,13 +1,13 @@
 .cardContainer {
 	width: 100%;
 	height: 100%;
-	background-color: #f8f6f6;
+	background-color: #fff;
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
 	grid-gap: 20px;
 	place-items: center;
 	padding: 17px 0;
-	border: 2px dashed #ccc;
+	border: 1px solid #ccc;
 	border-radius: 5px;
 }
 
@@ -31,5 +31,18 @@
 	}
 	to {
 		transform: rotate(360deg);
+	}
+}
+
+@media (max-width: 1020px) {
+	.cardContainer {
+		margin-top: 20px;
+	}
+}
+
+@media (max-width: 440px) {
+	.cardContainer {
+		background-color: transparent;
+		border: none;
 	}
 }
