--- a/JobsApp/src/components/FilterCategory.css
+++ b/JobsApp/src/components/FilterCategory.css
@@ -8,16 +8,17 @@
 	border: 1px solid #ccc;
 	background-color: #fff;
 	transition: transform 0.3s ease, box-shadow 0.5s ease;
-}
-.filterCategory.clicked {
-	background-color: #f8f6f6;
-	box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
-	transform: translateY(-3px);
+	cursor: pointer;
 }
 .filterCategory:hover {
 	transform: translateY(-3px);
-	cursor: pointer;
 	box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+}
+.filterCategory.clicked {
+	background-color: #d8d7e1;
+	box-shadow: 0px 5px 15px -3px rgba(0, 0, 0, 0.2);
+	border: 1px solid #999;
+	transform: translateY(-3px);
 }
 .filterCategoryName {
 	display: flex;
@@ -28,8 +29,20 @@
 .filterAvailable {
 	width: 30px;
 	height: 30px;
+	min-height: 30px;
+	min-width: 30px;
+	margin-left: 10px;
 	display: grid;
 	place-content: center;
 	border-radius: 50%;
-	background-color: #bab986;
+	background-color: #141414;
+	color: #fff;
+}
+
+@media (max-width: 1020px) {
+	.filterCategory {
+		width: auto;
+		min-width: 200px;
+		flex: 1;
+	}
 }
