--- a/JobsApp/src/components/Header.css
+++ b/JobsApp/src/components/Header.css
@@ -1,4 +1,10 @@
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
 .header {
+	position: relative;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -16,11 +22,16 @@
 	align-items: center;
 }
 
-.header__left h1 {
+.header__logo {
+	height: 100%;
+	display: flex;
+	align-items: center;
 	font-weight: 700;
-	margin-right: 30px;
-	color: #18181b;
+	color: #141414;
 	margin-left: 10px;
+}
+.header__logo svg {
+	font-size: 25px;
 }
 .header__left span {
 	height: 100%;
@@ -33,14 +44,15 @@
 	height: 100%;
 }
 
-.links {
+.header__links {
 	height: 100%;
 	display: flex;
+	padding-left: 20px;
 	align-items: center;
 	gap: 20px;
 }
 
-.links a {
+.header__links a {
 	font-weight: 500;
 	color: #333;
 	padding: 5px 10px;
@@ -74,4 +86,86 @@
 .account a:last-child:hover {
 	background-image: linear-gradient(90deg, #000039, #3e3e53);
 	color: #fff;
+}
+
+.links a.active {
+	background-size: 100% 3px;
+}
+.header__icon--open {
+	display: none;
+	font-size: 25px;
+	cursor: pointer;
+}
+
+.navResponsive {
+	width: 0;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	background-color: #191b22;
+	position: fixed;
+	top: 0;
+	left: -100%;
+	transition: all 0.7s;
+	z-index: 2;
+}
+.navResponsive__close {
+	width: 100%;
+	display: flex;
+	justify-content: flex-end;
+	font-size: 25px;
+	padding: 20px;
+	color: #fff;
+}
+.navResponsive__links {
+	width: 100%;
+	height: 60%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: 18px;
+	gap: 15px;
+}
+.navResponsive__links a {
+	text-decoration: none;
+	color: #fff;
+}
+.navResponsive__buttons {
+	width: 100%;
+	display: flex;
+	justify-content: space-around;
+}
+
+.navResponsive__buttons a {
+	padding: 10px 20px;
+	border: 1px solid #fff;
+	border-radius: 25px;
+	color: #fff;
+	text-decoration: none;
+}
+.navResponsive__buttons a:hover {
+	background-color: #fff;
+	color: #191b22;
+}
+@media (max-width: 930px) {
+	.header__icon--open {
+		display: block;
+	}
+	.header {
+		padding: 0 20px;
+	}
+	.header__links a {
+		display: none;
+	}
+	.navResponsive.active {
+		width: 55%;
+		left: 0;
+	}
+}
+@media (max-width: 495px) {
+	.navResponsive.active {
+		width: 100%;
+		left: 0;
+	}
 }
