--- a/JobsApp/src/index.css
+++ b/JobsApp/src/index.css
@@ -12,5 +12,5 @@ body {
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
-	background-color: #fafafa;
+	background-color: #f0ecfc;
 }
